# Otasuke

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 6181b2bacee8_initial.py  96986b6e1b05_add_direct_orders_table.py
backend/app/: config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  base.py  company.py  direct_order.py  notification.py  order.py  project.py  quote.py  review.py  user.py
backend/app/repositories/: company_repository.py  direct_order_repository.py  notification_repository.py  order_repository.py  project_repository.py  quote_repository.py  review_repository.py  user_repository.py
backend/app/routers/: auth.py  companies.py  dashboard.py  direct_orders.py  files.py  notifications.py  orders.py  projects.py  quotes.py  reviews.py
backend/app/schemas/: auth.py  company.py  dashboard.py  direct_order.py  notification.py  order.py  project.py  quote.py  review.py
backend/app/services/: auth_service.py  company_service.py  dashboard_service.py  direct_order_service.py  notification_service.py  order_service.py  project_service.py  quote_service.py  review_service.py
backend/app/utils/: pagination.py  s3.py  security.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_companies.py  test_health.py  test_notifications_dashboard.py  test_orders_reviews.py  test_projects_quotes.py
frontend/: package-lock.json  package.json  (+1 more)
(+58 files in other folders)
